# SITV

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  RIEMANNIAN_GEOMETRY_IMPLEMENTATION.md  config.yaml  main.py  pyproject.toml
archive/: main_original.py
data/: README.md
data/eval/: instruction_following_eval.txt  qa_factual_eval.txt  sentiment_negative_eval.txt  sentiment_positive_eval.txt
data/general/: coding.txt  common_knowledge.txt  mixed_domain.txt  wikitext.txt
data/tasks/: instruction_following.txt  qa_factual.txt  sentiment_negative.txt  sentiment_positive.txt
findings/2025-10-30/: ANALYSIS.md  IF.md  QA.md  SN.md  SP.md
scripts/: analyze_composition.py  compare_tasks.py
sitv/: __init__.py
sitv/analysis/: __init__.py  analyzer.py  composition_analyzer.py
sitv/cli/: __init__.py  args_parser.py
sitv/core/: __init__.py  device.py  error_handling.py  evaluation.py  task_vector.py  validation.py
sitv/data/: __init__.py  loader.py  models.py  tasks.py
sitv/experiments/: __init__.py  alpha_sweep.py  base.py  composition_2d.py  composition_3d.py  config.py  orchestrator.py
sitv/geometry/: __init__.py  config.py  curvature.py  geodesic.py  metric.py  symmetry.py  task_vector.py
sitv/io/: __init__.py  file_manager.py  paths.py
sitv/models/: __init__.py  fine_tuner.py  loader.py
sitv/reporting/: __init__.py  comparison_report.py  markdown.py
sitv/utils/: __init__.py  console.py  progress.py  timing.py
sitv/visualization/: __init__.py  plotter.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_data_loader.py  test_data_models.py  test_device.py  test_file_manager.py  test_markdown_reporter.py  test_model_management.py  test_sampling_strategies.py  test_task_vector.py
(+49 files in other folders)
